# oscar_vision

./: CMakeLists.txt  LICENSE  README.md  package.xml
include/mimik/vision/: google_cloud_ocr.h  google_cloud_vision_conversions.h  opencv.h  realsense.h  utils.h
include/oscar/vision/: google_cloud_ocr.h  google_cloud_vision_conversions.h  opencv.h  realsense.h  utils.h
src/: analyse_bacterial_colonies.cpp  annotate_images.cpp  d415_crop.cpp  d415_crop_image.cpp  d415_perspective_transform.cpp  d415_projection.cpp  d415_text_detection.cpp  google_cloud_ocr.cpp  google_cloud_vision_conversions.cpp  google_cloud_vision_quickstart.cpp  opencv.cpp  realsense.cpp
