<?xml version="1.0"?>
<package format="2">
  <name>mimik_vision</name>
  <version>0.0.0</version>
  <description>Vision algorithm examples</description>

  <author>Captain Yoshi</author>
  <maintainer email="captain.yoshisaur@gmail.com">Captain Yoshi</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>image_geometry</depend>
  <depend>cv_bridge</depend>
  <depend>eigen</depend>
  <depend>google_cloud_cpp_vision</depend>

</package>
